Add android client module.

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "MyTeamPlayer"
 include ':app-tv-server'
 include ':app-client-common'
+include ':app-client-android'
