--- a/app-client-android/src/main/AndroidManifest.xml
+++ b/app-client-android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.dmdev.myteamplayer.client">
+    package="me.dmdev.myteamplayer">
 
     <application
         android:allowBackup="true"
