--- a/settings.gradle
+++ b/settings.gradle
@@ -3,13 +3,15 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven { url "https://maven.pkg.jetbrains.space/public/p/compose/dev" }
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
-        google()
         mavenCentral()
+        google()
+        maven { url "https://maven.pkg.jetbrains.space/public/p/compose/dev" }
     }
 }
 rootProject.name = "MyTeamPlayer"
@@ -17,3 +19,4 @@ include ':app-tv-server'
 include ':app-client-common'
 include ':app-client-android'
 include ':app-common-models'
+include ':app-client-web'
